--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <version>3.2.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.0.Final</version>
+        </dependency>
+
         <!--多线程单元测试支持 不太好用 原Thread很多方法用不了-->
         <dependency>
             <groupId>net.sourceforge.groboutils</groupId>
