--- a/pom.xml
+++ b/pom.xml
@@ -105,11 +105,11 @@
             <version>6.9.8</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.github.xingePush</groupId>
             <artifactId>xinge</artifactId>
             <version>1.2.2-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
