--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
             <version>1.2.2-SNAPSHOT</version>
         </dependency>-->
 
+        <!--查看对象头-->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.10</version>
+        </dependency>
     </dependencies>
 
     <repositories>
